--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "champions-league-proxy",
   "version": "1.0.0",
-  "description": "Champions League maçlarını almak için proxy sunucu",
   "main": "app.js",
   "type": "module",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "node-fetch": "^3.3.2"
+    "express": "^4.18.2"
   }
 }
