--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "champions-league-proxy",
+  "name": "champions-league-proxy-v2",
   "version": "1.0.0",
-  "main": "app.js",
   "type": "module",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "axios": "^1.7.3",
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "cors": "^2.8.5"
   }
 }
